fixed mistakes in other parts of the code